--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,7 +18,9 @@
             "valuesFormatting": "parseText",
             "preLaunchTask": "Build Example",
             "env": {
-                "WEBKIT_DISABLE_COMPOSITING_MODE" : 1
+                "__GLX_VENDOR_LIBRARY_NAME": "nvidia",
+                "__NV_PRIME_RENDER_OFFLOAD": "1",
+                "__VK_LAYER_NV_optimus": "NVIDIA_only",
             }
         },
         {
@@ -59,6 +61,5 @@
                 }
             ]
         },
-        
     ]
 }
